--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sensive Blog - Home</title>
-  <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-
-  <link rel="stylesheet" href="{% static 'styles.min.css' %}">
-</head>
-<body>
+{% block content %}
   <!--================Header Menu Area =================-->
   <header class="header_area">
     <div class="main_menu">
@@ -72,7 +62,7 @@
                   {% endif %}
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">{{most_popular_post.title}}</a></h3>
+                  <h3><a href="{% url 'post_detail' slug=most_popular_post.slug %}">{{most_popular_post.title}}</a></h3>
                   <p>{{most_popular_post.published_at}}</p>
                 </div>
               </div>
@@ -106,7 +96,7 @@
                 <div class="details mt-20">
                   <h3>{{fresh_post.title}}</h3>
                   <p>{{fresh_post.text|truncatechars:200}}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' slug=fresh_post.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
             {% endfor %}
@@ -236,6 +226,4 @@
   </footer>
   <!--================ End Footer Area =================-->
 
-  <script src="{% static 'scripts.js' %}"></script>
-</body>
-</html>
+{% endblock %}
